--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.6.7",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
+    "node-fetch": "^3.3.2",
     "redis": "^4.6.13"
   },
   "name": "redis-cache-server",
