--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
     "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
+    "nodemon": "^3.1.0",
+    "object-hash": "^3.0.0",
     "redis": "^4.6.13"
   },
   "name": "redis-cache-server",
@@ -10,6 +13,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
